--- a/web.config
+++ b/web.config
@@ -1,7 +1,7 @@
 <configuration>
   <system.webServer>
     <handlers>
-      <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+      <add name="iisnode" path="server.js" verb="*" modules="iisnode" scriptProcessor="node" resourceType="Unspecified" />
     </handlers>
     <rewrite>
       <rules>
