--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@stackbit/cms-git": "^1.0.20",
+    "@stackbit/types": "^2.1.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
